--- a/style.css
+++ b/style.css
@@ -23,3 +23,9 @@ div img {
 h1, h2 {
     font-family: "lora", serif;
 }
+h1 {
+    font-size: 40px;
+    color: #312e23;
+    line-height: 100%;
+    margin-bottom: 24px;
+}
