--- a/style.css
+++ b/style.css
@@ -21,11 +21,47 @@ div img {
     margin-bottom: 40px;
 }
 h1, h2 {
-    font-family: "lora", serif;
+    font-family: 'lora', serif;
 }
 h1 {
     font-size: 40px;
     color: #312e23;
     line-height: 100%;
     margin-bottom: 24px;
+}
+p, li, th, td{
+    font-family: 'Outfit', sans-serif;
+}
+p  {
+   color: #5f564d;
+   line-height: 150%;
+   margin-bottom: 32px;
+}
+.tempo {
+    background-color: #fff7fb;
+    padding: 28px;
+    border-radius: 12px;
+}
+.tempo h2 {
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 100%;
+    font-family: 'Outfit', sans-serif;
+    color: #7a284e;
+    margin-bottom: 16px;
+} 
+li {
+    padding-left: 10ex;
+    color: #5f564d;
+    line-height: 150%;
+}
+li + li {
+    margin-top: 8px;
+}
+ol, ul {
+    margin-left: 20px;
+}
+.tempo li::marker{
+    color: #7a284e;
+    font-size: 12px;
 }
